# seed-rocket-diesel-template

./: .env  .gitignore  Cargo.toml  README.md  db.sqlite3  justfile
api/: Cargo.toml
api/src/: db.rs  main.rs
migrations/2021-04-09-205815_student/: up.sql
src/: lib.rs  schema.rs  student.rs
web/: Cargo.toml  index.css  index.html
web/scss/: index.scss
web/src/: api_call.rs  lib.rs
