[package]
name = "api"
version = "0.1.0"
authors = ["David Purdum <purdum41@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed-rocket-diesel-template = { path = "../", features = ["database"] }
rocket = { version = "0.4.5" }
rocket_cors = "0.5.2"
rocket_contrib = { version = "0.4.5" }
diesel = { version = "1.4.5" }
