[package]
name = "web"
version = "0.1.0"
authors = ["David Purdum <purdum41@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed-rocket-diesel-template = { path = "../" }
seed = "^0.8.0"
wasm-bindgen = { version = "^0.2.68" }
web-sys = { version = "0.3.45", features = ["Element", "HtmlFormElement", "HtmlCollection"] }
serde = "^1.0"
